More spacing fixes, will probably need to be fixed in a "better" way down the line

--- a/pages/locations.css
+++ b/pages/locations.css
@@ -39,4 +39,11 @@
 .locationCardRight{
     height: 100%;
     width: 62%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-size: 1.75em;
+    position: relative;
+    padding-left: 2em;
+    text-align: left;
 }
